# advent-of-code-rs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
solvers/: .gitignore  Cargo.toml  perf.data  perf.data.old
solvers/cli/: Cargo.toml
solvers/cli/src/: main.rs  maybe_shared.rs  scaffold_solver.rs
solvers/common/: Cargo.toml
solvers/common/src/: inventory.rs  lib.rs  map.rs  math_helper.rs  prelude.rs
solvers/tests/2024/18/: input_1
solvers/years/2022/day01/src/: lib.rs
solvers/years/2022/day02/: Cargo.toml
solvers/years/2022/day02/src/: lib.rs
solvers/years/2022/day03/src/: lib.rs
solvers/years/2022/day04/src/: lib.rs
solvers/years/2022/day05/: Cargo.toml
solvers/years/2022/day05/src/: lib.rs
solvers/years/2022/day06/src/: lib.rs
solvers/years/2022/day07/src/: lib.rs
solvers/years/2022/day08/: Cargo.toml
solvers/years/2022/day08/src/: lib.rs
solvers/years/2022/day09/src/: lib.rs
solvers/years/2022/day10/src/: lib.rs
solvers/years/2022/day11/src/: lib.rs
solvers/years/2022/day12/src/: lib.rs
solvers/years/2022/day13/: Cargo.toml
solvers/years/2022/day13/src/: lib.rs
solvers/years/2022/day14/src/: lib.rs
solvers/years/2023/day01/src/: lib.rs
solvers/years/2023/day02/src/: lib.rs
solvers/years/2023/day03/src/: lib.rs
solvers/years/2023/day04/: Cargo.toml
solvers/years/2023/day04/src/: lib.rs
solvers/years/2023/day05/src/: lib.rs
solvers/years/2023/day06/src/: lib.rs
solvers/years/2023/day07/: Cargo.toml
solvers/years/2023/day07/src/: lib.rs
solvers/years/2023/day08/src/: lib.rs
solvers/years/2023/day09/: Cargo.toml
solvers/years/2023/day09/src/: lib.rs
solvers/years/2023/day10/src/: lib.rs
solvers/years/2024/day01/: Cargo.toml
solvers/years/2024/day01/src/: lib.rs
solvers/years/2024/day02/: Cargo.toml
solvers/years/2024/day02/src/: lib.rs
solvers/years/2024/day03/: Cargo.toml
solvers/years/2024/day03/src/: lib.rs
solvers/years/2024/day04/: Cargo.toml
solvers/years/2024/day04/src/: lib.rs
solvers/years/2024/day05/: Cargo.toml
solvers/years/2024/day05/src/: lib.rs
solvers/years/2024/day06/: Cargo.toml
solvers/years/2024/day06/src/: lib.rs
solvers/years/2024/day07/: Cargo.toml
solvers/years/2024/day07/src/: lib.rs
solvers/years/2024/day08/: Cargo.toml
solvers/years/2024/day09/: Cargo.toml
solvers/years/2024/day10/: Cargo.toml
solvers/years/2024/day11/: Cargo.toml
solvers/years/2024/day12/: Cargo.toml
solvers/years/2024/day13/: Cargo.toml
solvers/years/2024/day14/: Cargo.toml
solvers/years/2024/day15/: Cargo.toml
solvers/years/2024/day16/: Cargo.toml
solvers/years/2024/day17/: Cargo.toml
solvers/years/2024/day18/: Cargo.toml
solvers/years/2024/day19/: Cargo.toml
years/2022/year/: Cargo.toml
years/2022/year/src/: lib.rs
years/2023/year/: Cargo.toml
years/2023/year/src/: lib.rs
(+142 files in other folders)
