[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
comfy-table = "7.1"
clap = { version = "4.4.11", features = ["derive"] }
year2022 = { path = "../years/2022/year" }
year2023 = { path = "../years/2023/year" }
