[workspace]
members = ["common", "cli", "imports", "years/*/day*"]
resolver = "2"

[workspace.dependencies]
itertools = "0.13"
regex = "1.11"
chumsky = "0.9.3"
strum = "0.26.3"
strum_macros = "0.26.4"
num = "0.4.1"
enum-iterator = "2.1"
common = { path = "common" }
rayon = "1.10"
cached = "0.54.0"
petgraph = { version = "0.6.5", features = ["rayon"] }
pathfinding = "4.12"
tinyvec = { version = "1.8.0", features = ["alloc"] }

[profile.release]
debug = true
