[package]
name = "year2022"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
year2022_day01.path = "../day01"
year2022_day02.path = "../day02"
year2022_day03.path = "../day03"
year2022_day04.path = "../day04"
year2022_day05.path = "../day05"
year2022_day06.path = "../day06"
year2022_day07.path = "../day07"
year2022_day08.path = "../day08"
year2022_day09.path = "../day09"
year2022_day10.path = "../day10"
year2022_day11.path = "../day11"
year2022_day12.path = "../day12"
year2022_day13.path = "../day13"
year2022_day14.path = "../day14"
year2022_day15.path = "../day15"
year2022_day16.path = "../day16"
year2022_day17.path = "../day17"
year2022_day18.path = "../day18"
year2022_day19.path = "../day19"
year2022_day20.path = "../day20"
year2022_day21.path = "../day21"
year2022_day22.path = "../day22"
year2022_day23.path = "../day23"
year2022_day24.path = "../day24"
