[package]
name = "year2023"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
year2023_day01.path = "../day01"
year2023_day02.path = "../day02"
year2023_day03.path = "../day03"
year2023_day04.path = "../day04"
year2023_day05.path = "../day05"
year2023_day06.path = "../day06"
year2023_day07.path = "../day07"
year2023_day08.path = "../day08"
year2023_day09.path = "../day09"
year2023_day10.path = "../day10"
year2023_day11.path = "../day11"
year2023_day12.path = "../day12"
year2023_day13.path = "../day13"
year2023_day14.path = "../day14"
year2023_day15.path = "../day15"
year2023_day16.path = "../day16"
year2023_day17.path = "../day17"
year2023_day18.path = "../day18"
year2023_day19.path = "../day19"
year2023_day20.path = "../day20"
year2023_day21.path = "../day21"
year2023_day22.path = "../day22"
year2023_day23.path = "../day23"
year2023_day24.path = "../day24"
